# idp

./: .gitignore  AGENTS.md  AUTHORS  LICENSE  NOTICE  README.md  README.zh-CN.md  TRADEMARKS.md
backend/: .env.local.example  .env.server.example  .gitignore  README.md  README.zh-CN.md  alembic.ini  pyproject.toml  requirements.txt  restart.sh  start.sh  stop.sh
backend/alembic/: env.py
backend/alembic/versions/: 0001_community_schema.py
backend/app/: __init__.py  main.py
backend/app/api/: dependencies.py  route_metrics.py
backend/app/core/: config.py  edition_policy.py
backend/app/db/: __init__.py  base.py  models.py  session.py
backend/app/domain/: models.py
backend/app/repositories/: mysql_repository.py  protocols.py
backend/app/schemas/: auth.py  skill_prototype.py  system.py  workbench.py
backend/app/services/: agentscope_runtime.py  application_assets.py  auth.py  business_skills.py  db_auth.py  document_tree_artifacts.py  document_tree_builder.py  document_tree_scope.py  evaluation_text.py  evidence_v2.py  extraction_result.py  extraction_result_compat.py  extraction_skills.py  llm.py  mineru.py  oss.py  parse_pipeline.py  prompt_pipeline.py  result_artifacts.py  runtime_evidence.py  runtime_store.py  semantic_locator.py  semantic_locator_reranker.py  skill_assist_service.py  skill_loader.py  skill_prototype_job_service.py  skill_prototype_service.py  (+3 more)
backend/scripts/: diagnose_auth.py
backend/tests/: test_community_sqlite_bootstrap.py  test_config.py  test_edition_policy.py  test_mineru_service.py  test_no_business_hardcoding.py
(+146 files in other folders)
