[project]
name = "idp-poc-backend"
version = "0.1.0"
description = "Backend foundation for the IDP community workbench"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
  "eval_type_backport>=0.2.0,<1.0.0",
  "alibabacloud_oss_v2>=1.1.0",
  "fastapi>=0.115.0,<1.0.0",
  "python-multipart>=0.0.9,<1.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
  "sqlalchemy>=2.0.0,<3.0.0",
  "pymysql>=1.1.0,<2.0.0",
  "alembic>=1.13.0,<2.0.0",
  "httpx>=0.27.0,<1.0.0",
  "PyYAML>=6.0.0,<7.0.0",
  "agentscope>=2.0.1,<3.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0,<9.0.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
